Added identity to main layout.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,8 @@
     <title><%= current_page.data.title || "Middleman" %></title>
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
+
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
   <body>
     <%= yield %>
