--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,5 +14,17 @@
   </head>
   <body>
     <%= yield %>
+
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
