--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,30 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Middleman" %></title>
-    <%= stylesheet_link_tag "site" %>
-    <%= javascript_include_tag "site" %>
-
-    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <%= partial 'partials/head' %>
   </head>
   <body>
-    <%= yield %>
-
-    <script>
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", user => {
-          if (!user) {
-            window.netlifyIdentity.on("login", () => {
-              document.location.href = "/admin/";
-            });
-          }
-        });
-      }
-    </script>
+    <%= partial 'partials/header' %>
+    <main>
+      <%= yield %>
+    </main>
+    <%= partial 'partials/footer' %>
+    <%= partial 'partials/end_scripts' %>
   </body>
 </html>
