Changes to admin config

--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -1,13 +1,10 @@
 <header>
-  <nav class="navbar is-primary has-shadow">
+  <nav class="navbar has-shadow">
     <div class="container">
       <div class="navbar-brand">
-        <% link_to 'http://mysite.com', class: 'navbar-item' do %>
-          img
+        <% link_to '/', class: 'navbar-item' do %>
+          <%= image_tag data.settings.logo %>
         <% end %>
-        <a class="navbar-item" href="#">
-          <img src="" alt="" />
-        </a>
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
@@ -15,6 +12,11 @@
         </a>
       </div>
       <div class="navbar-menu">
+        <div class="navbar-end">
+          <% data.navigation.links.each do |link| %>
+            <%= link_to link.label, link.url, class: 'navbar-item' %>
+          <% end %>
+        </div>
       </div>
     </div>
   </nav>
