Added stimulus. Added js to navbar. Added modal so when images are clicked they open the modal. Added footer.

--- a/source/partials/pages/_content_only.html.erb
+++ b/source/partials/pages/_content_only.html.erb
@@ -1,11 +1,6 @@
 <section class="section">
   <div class="container">
-    <% if section.title.present? %>
-      <p class="title"><%= section.title %></p>
-    <% end %>
-    <% if  section.subtitle.present? %>
-      <p class="subtitle"><%= section.subtitle %></p>
-    <% end %>
+    <%= partial 'partials/section_header', locals: { section: section } %>
     <div class="content is-medium">
       <%= markdown section.content %>
     </div>
