--- a/source/partials/_end_scripts.html.erb
+++ b/source/partials/_end_scripts.html.erb
@@ -1,12 +1,16 @@
 <!-- Netlify Identity login -->
+<script type='text/javascript' src='https://identity.netlify.com/v1/netlify-identity-widget.js'></script>
 <script>
   if (window.netlifyIdentity) {
-    window.netlifyIdentity.on("init", user => {
+    window.netlifyIdentity.on('init', user => {
       if (!user) {
-        window.netlifyIdentity.on("login", () => {
-          document.location.href = "/admin/";
+        window.netlifyIdentity.on('login', () => {
+          document.location.href = '/admin/';
         });
       }
     });
   }
 </script>
+
+<script src='https://unpkg.com/stimulus/dist/stimulus.umd.js'></script>
+<%= javascript_include_tag 'site' %>
