--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -1,17 +1,24 @@
-<header>
+<header data-controller="navbar">
   <nav class="navbar has-shadow">
     <div class="container">
       <div class="navbar-brand">
         <% link_to '/', class: 'navbar-item' do %>
           <%= image_tag data.settings.logo %>
         <% end %>
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+        <a
+          role="button"
+          class="navbar-burger"
+          aria-label="menu"
+          aria-expanded="false"
+          data-target="navbar.button"
+          data-action="navbar#toggleMenu"
+        >
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
         </a>
       </div>
-      <div class="navbar-menu">
+      <div class="navbar-menu" data-target="navbar.menu">
         <div class="navbar-end">
           <% data.navigation.links.each do |link| %>
             <%= link_to link.label, link.url, class: 'navbar-item' %>
