--- a/source/partials/pages/_images_only.html.erb
+++ b/source/partials/pages/_images_only.html.erb
@@ -1,20 +1,16 @@
 <section class="section">
   <div class="container">
-    <% if section.title.present? %>
-      <p class="title"><%= section.title %></p>
-    <% end %>
-    <% if  section.subtitle.present? %>
-      <p class="subtitle"><%= section.subtitle %></p>
-    <% end %>
+    <%= partial 'partials/section_header', locals: { section: section } %>
     <% if section.images %>
-      <div class="columns">
-        <% section.images.each do |image| %>
-          <div class="column">
-            <figure class="image">
-              <%= image_tag image.image, alt: image.label %>
+      <div class="columns" data-controller="modal">
+        <% section.images.each_with_index do |image, index| %>
+          <div class="column has-content-centered">
+            <figure class="image" data-action="click->modal#open">
+              <%= image_tag image.image, alt: image.label, data: { index: index } %>
             </figure>
           </div>
         <% end %>
+        <%= partial 'partials/image_modal', locals: { images: section.images } %>
       </div>
     <% end %>
   </div>
