--- a/source/partials/pages/_images_left.html.erb
+++ b/source/partials/pages/_images_left.html.erb
@@ -5,9 +5,11 @@
       <div class="column is-5 has-content-centered" data-controller="modal">
         <% if section.images %>
           <% section.images.each_with_index do |image, index| %>
-            <figure class="image" data-action="click->modal#open">
-              <%= image_tag image.image, alt: image.label, data: { index: index } %>
-            </figure>
+            <a role="button" tabindex="0" data-action="click->modal#open">
+              <figure class="image">
+                <%= image_tag image.image, alt: image.label, data: { index: index } %>
+              </figure>
+            </a>
           <% end %>
 
           <%= partial 'partials/image_modal', locals: { images: section.images } %>
