--- a/source/partials/pages/_content_only.html.erb
+++ b/source/partials/pages/_content_only.html.erb
@@ -4,5 +4,6 @@
     <div class="content is-medium">
       <%= markdown section.content %>
     </div>
+    <%= partial 'partials/files_list', locals: { files: section&.files } %>
   </div>
 </section>
