--- a/source/templates/_page.html.erb
+++ b/source/templates/_page.html.erb
@@ -1,3 +1,3 @@
-<% page.sections.each do |section| %>
+<% page&.sections&.each do |section| %>
   <%= partial "partials/pages/#{section.type}", locals: { section: section } %>
 <% end %>
