--- a/source/partials/_image_modal.html.erb
+++ b/source/partials/_image_modal.html.erb
@@ -9,8 +9,8 @@
   </div>
   <% if images.length > 1 %>
     <div class="modal-nav">
-      <button type="button" data-action="modal#previous" class="button is-medium is-inverted is-outlined is-dark is-rounded">Prev</button>
-      <button type="button" data-action="modal#next" class="button is-medium is-inverted is-outlined is-dark is-rounded">Next</button>
+      <button type="button" data-action="modal#previous" class="button is-medium is-inverted is-outlined is-primary is-rounded">Prev</button>
+      <button type="button" data-action="modal#next" class="button is-medium is-inverted is-outlined is-primary is-rounded">Next</button>
     </div>
   <% end %>
   <button class="modal-close is-large" aria-label="close" data-action="modal#close"></button>
