--- a/source/stylesheets/bulma.css.scss
+++ b/source/stylesheets/bulma.css.scss
@@ -7,5 +7,8 @@ $family-custom: 'Handlee', cursive;
 // Use the new serif family
 $family-primary: $family-custom;
 
+$primary: $blue;
+
 @import "bulma/sass/utilities/derived-variables";
+
 @import "bulma/bulma";
