Added contact form in footer. Added header component

--- a/source/partials/_head.html.erb
+++ b/source/partials/_head.html.erb
@@ -1,6 +1,11 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- Use the title from a page's frontmatter if it has one -->
-<title><%= current_page.data.title || "Middleman" %></title>
+
+<!-- SEO -->
+<title><%= [data.settings.title, page.title].join(' | ') %></title>
+<meta name="description" content="<%= page.description || data.seo.description %>">
+<meta name="keywords" content="<%= data.seo.keywords.map(&:keyword).join(',') %>">
+
+<!-- Styles -->
 <%= stylesheet_link_tag "site" %>
