--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -1,8 +1,30 @@
 <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
+      <div class="column">
+        <form style="max-width: 30rem;" name="contact" method="POST" netlify>
+          <p class="heading">Get in Touch</p>
+          <div class="field">
+            <label for="name">Name <sup class="has-text-danger">*</sup></label>
+            <input type="text" name="name" required class="input" />
+          </div>
+          <div class="field">
+            <label for="email">Email <sup class="has-text-danger">*</sup></label>
+            <input type="email" name="email" required class="input" />
+          </div>
+          <div class="field">
+            <label for="email">Phone Number <sup class="has-text-danger">*</sup></label>
+            <input type="tel" name="email" required class="input" />
+          </div>
+          <div class="field">
+            <label for="comments">Comments</label>
+            <textarea name="comments" class="textarea" rows="4"></textarea>
+          </div>
+          <button type="submit" class="button is-primary">Submit</button>
+        <form>
+      </div>
       <% data.footer.columns.each do |column| %>
-        <div class="column is-narrow">
+        <div class="column">
           <% if column.label.present? %>
             <div>
               <p class="heading"><%= column.label %></p>
