Added header styles

--- a/source/partials/_section_header.html.erb
+++ b/source/partials/_section_header.html.erb
@@ -1,9 +1,9 @@
 <header>
   <% if section.title.present? %>
-    <p class="title is-1"><%= section.title %></p>
+    <p class="title is-1 is-size-3-mobile"><%= section.title %></p>
   <% end %>
   <% if  section.subtitle.present? %>
-    <p class="subtitle is-3"><%= section.subtitle %></p>
+    <p class="subtitle is-3 is-size-5-mobile"><%= section.subtitle %></p>
   <% end %>
   <hr class="is-invisible" />
 </header>
