--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -9,6 +9,12 @@
     display: flex;
     align-items: center;
     flex: 1;
+
+    figure {
+      max-height: 100%;
+      padding: 1rem;
+      display: flex;
+    }
   }
 
   .modal-nav {
