design change requests...

--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -21,7 +21,7 @@
       <div class="navbar-menu" data-target="navbar.menu">
         <div class="navbar-end">
           <% data.navigation.links.each do |link| %>
-            <%= link_to link.label, link.url, class: 'navbar-item' %>
+            <%= link_to link.label, link.url, class: 'navbar-item is-size-4' %>
           <% end %>
         </div>
       </div>
