--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -36,13 +36,36 @@
   resize: none;
 }
 
-.hero {
+.hero.has-background-image {
   background-position: center;
   background-size: cover;
 
   .title,
   .subtitle,
   .content {
+    color: white;
     text-shadow: 0 0 8px black;
+  }
+}
+
+
+.navbar-item img {
+  max-height: 8em;
+}
+
+
+@media screen and (min-width: 1088px) {
+  .navbar-end {
+    margin: auto;
+    background-color: $primary;
+    height: 5em;
+    padding: 0 2em;
+
+    .navbar-item {
+      color: $white !important;
+      &:hover, &:focus {
+        background: rgba(0, 0, 0, 0.1) !important;
+      }
+    }
   }
 }
