--- a/source/partials/pages/_images_left.html.erb
+++ b/source/partials/pages/_images_left.html.erb
@@ -15,7 +15,7 @@
           <%= partial 'partials/image_modal', locals: { images: section.images } %>
         <% end %>
       </div>
-      <div class="column is-7">
+      <div class="column is-7 has-content-centered">
         <div class="content is-medium">
           <%= markdown section.content %>
         </div>
