--- a/source/partials/pages/_images_right.html.erb
+++ b/source/partials/pages/_images_right.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <%= partial 'partials/section_header', locals: { section: section } %>
     <div class="columns">
-      <div class="column is-7">
+      <div class="column is-7 has-content-centered">
         <div class="content is-medium">
           <%= markdown section.content %>
         </div>
