--- a/source/partials/pages/_images_left.html.erb
+++ b/source/partials/pages/_images_left.html.erb
@@ -16,7 +16,7 @@
         <% end %>
       </div>
       <div class="column is-7 has-content-centered">
-        <div class="content is-medium">
+        <div class="content is-large">
           <%= markdown section.content %>
         </div>
       </div>
