--- a/source/partials/pages/_images_right.html.erb
+++ b/source/partials/pages/_images_right.html.erb
@@ -3,7 +3,7 @@
     <%= partial 'partials/section_header', locals: { section: section } %>
     <div class="columns">
       <div class="column is-7 has-content-centered">
-        <div class="content is-medium">
+        <div class="content is-large">
           <%= markdown section.content %>
         </div>
 
