--- a/source/partials/_section_header.html.erb
+++ b/source/partials/_section_header.html.erb
@@ -1,11 +1,10 @@
 <% if section.title.present? || section.subtitle.present? %>
   <header>
     <% if section.title.present? %>
-      <p class="title is-1 is-size-2-mobile"><%= section.title %></p>
+      <p class="title is-2 is-size-3-mobile <%= 'has-text-centered' if is_centered %>"><%= section.title %></p>
     <% end %>
     <% if  section.subtitle.present? %>
-      <p class="subtitle is-3 is-size-4-mobile"><%= section.subtitle %></p>
+      <p class="subtitle is-4 is-size-5-mobile <%= 'has-text-centered' if is_centered %>"><%= section.subtitle %></p>
     <% end %>
-    <hr class="is-invisible" />
   </header>
 <% end %>
