--- a/source/partials/pages/_content_only.html.erb
+++ b/source/partials/pages/_content_only.html.erb
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container">
-    <%= partial 'partials/section_header', locals: { section: section } %>
+    <%= partial 'partials/section_header', locals: { section: section, is_centered: false } %>
     <div class="content is-large">
       <%= markdown section.content %>
     </div>
