--- a/source/partials/pages/_link_list.html.erb
+++ b/source/partials/pages/_link_list.html.erb
@@ -1,12 +1,12 @@
 <section class="section">
   <div class="container">
-    <%= partial 'partials/section_header', locals: { section: section } %>
+    <%= partial 'partials/section_header', locals: { section: section, is_centered: true } %>
 
     <div class="menu">
       <ul class="menu-list">
         <% section&.files.each do |file| %>
           <li>
-            <a href="<%= file.file || file.url %>">
+            <a href="<%= file.file || file.url %>" class="is-size-4 is-size-5-mobile has-text-centered">
               <%= file.label %>
             </a>
           </li>
