--- a/source/partials/pages/_images_right.html.erb
+++ b/source/partials/pages/_images_right.html.erb
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container">
-    <%= partial 'partials/section_header', locals: { section: section } %>
+    <%= partial 'partials/section_header', locals: { section: section, is_centered: false } %>
     <div class="columns">
       <div class="column is-7 has-content-centered">
         <div class="content is-large">
