--- a/source/partials/_section_header.html.erb
+++ b/source/partials/_section_header.html.erb
@@ -1,7 +1,7 @@
 <% if section.title.present? || section.subtitle.present? %>
-  <header>
+  <header style="margin-bottom: 1rem">
     <% if section.title.present? %>
-      <p class="title is-2 is-size-3-mobile <%= 'has-text-centered' if is_centered %>"><%= section.title %></p>
+      <p id="<%= section.title.downcase.gsub!(/[^0-9A-Za-z]/, '-') %>" class="title is-2 is-size-3-mobile <%= 'has-text-centered' if is_centered %>"><%= section.title %></p>
     <% end %>
     <% if  section.subtitle.present? %>
       <p class="subtitle is-4 is-size-5-mobile <%= 'has-text-centered' if is_centered %>"><%= section.subtitle %></p>
