--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -31,7 +31,7 @@
             </div>
           <% end %>
           <% if column.content.present? %>
-            <p class="content">
+            <p class="content is-large">
               <%= markdown column.content %>
             <p>
           <% end %>
