--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -31,9 +31,9 @@
             </div>
           <% end %>
           <% if column.content.present? %>
-            <p class="content is-large">
+            <div class="content is-large">
               <%= markdown column.content %>
-            </p>
+            </div>
           <% end %>
         </div>
       <% end %>
