--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -3,6 +3,7 @@
     <div class="columns is-centered">
       <div class="column">
         <form style="max-width: 30rem;" name="contact" method="POST" netlify>
+          <input type="hidden" name="form-name" value="contact" />
           <p class="heading">Get in Touch</p>
           <div class="field">
             <label for="name">Name <sup class="has-text-danger">*</sup></label>
