--- a/source/partials/_end_scripts.html.erb
+++ b/source/partials/_end_scripts.html.erb
@@ -13,4 +13,5 @@
 </script>
 
 <script src='https://unpkg.com/stimulus/dist/stimulus.umd.js'></script>
-<%= javascript_include_tag 'site' %>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+<%= javascript_include_tag 'site', type: "module" %>
