--- a/source/stylesheets/bulma.css.scss
+++ b/source/stylesheets/bulma.css.scss
@@ -38,6 +38,7 @@ $info: #0495FF;
     justify-content: center;
     font-size: 1.5rem;
     line-height: 3.25rem;
+    border: 0;
     padding: 0;
     top: calc(50% - 1.5rem);
 
