Adds copyright info to footer.

--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -42,5 +42,11 @@
         </div>
       <% end %>
     </div>
+    <section class="section" data-controller="copyright">
+      <p class="is-size-7 has-text-centered">
+        Copyright (c) 2019-<span data-target="copyright.currentYear"><%= Date.today.strftime('%Y') %></span>, Realty Utah, LLC.  All rights are reserved.  No part of this website may be reproduced without the express written consent of the owner.
+      </p>
+    </section>
+
   </div>
 </footer>
