Adds COVID 19 response message.

--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -1,4 +1,18 @@
 <header data-controller="navbar">
+  <div class="container">
+    <div class="covid-message">
+      <div class="content is-medium">
+        <h4>COVID 19 Model Home Policy</h4>
+        <ul>
+          <li>Social distancing.</li>
+          <li>Masks available to those having none.</li>
+          <li>Only 1 family at a time may tour model.</li>
+          <li>Guests may wash & sanitize hands at departure.</li>
+          <li>Surfaces sanitized after each visit.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <nav class="navbar has-shadow">
     <div class="container">
       <div class="navbar-brand">
