Try to fix stimulus

--- a/source/partials/_end_scripts.html.erb
+++ b/source/partials/_end_scripts.html.erb
@@ -12,6 +12,6 @@
   }
 </script>
 
-<script src='https://unpkg.com/stimulus/dist/stimulus.umd.js'></script>
+<script src="https://unpkg.com/browse/stimulus@2.0.0/dist/stimulus.umd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 <%= javascript_include_tag 'site', type: "module" %>
