--- a/source/partials/_end_scripts.html.erb
+++ b/source/partials/_end_scripts.html.erb
@@ -12,6 +12,6 @@
   }
 </script>
 
-<script src="https://unpkg.com/browse/stimulus@1.0.1/dist/stimulus.umd.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/stimulus@1.1.1/dist/stimulus.umd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 <%= javascript_include_tag 'site', type: "module" %>
