--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column">
-        <form style="max-width: 30rem;" method="POST" action="https://formsubmit.co/6ad7651e0c935985f99ab122ed09c44">
+        <form style="max-width: 30rem;" method="POST" action="https://formsubmit.co/aaron@utahrealty.com">
           <input type="text" name="_honey" style="display:none">
           <p class="heading">Get in Touch</p>
           <div class="field">
